--- a/CSS/exercicio 2/index.html
+++ b/CSS/exercicio 2/index.html
@@ -15,7 +15,7 @@
         <picture>
             <source media="(min-width: 888px)" srcset="img/coffee500px.jpg">
             <source media="(min-width: 500px)" srcset="img/coffee150px.jpg">
-            <img src="/exercicio 2/img/coffee50px.jpg" alt="">
+            <img src="curso-front/CSS/exercicio 2/img/coffee50px.jpg" alt="">
         </picture>
         <article>
             <h2>● Cofee-Pand</h2>
