--- a/javascript/loop/index.html
+++ b/javascript/loop/index.html
@@ -20,17 +20,15 @@
                 <img src="img/reverter (1).png" alt="reverter">
             </button>
             <div id="res1" class="resu">
-
             </div>
         </div>
         <div class="mei" id="direita">
             <h2>Numero decimal para binario</h2>
             <input type="text" id="decimal" class="entrada" placeholder="digito o numero em decimal">
-            <button onclick="">
+            <button onclick="decimal()">
                 <img src="img/reverter (1).png" alt="reverter">
             </button>
             <div id="res2" class="resu">
-
             </div>
         </div>
     </section>
