--- a/bootstrap/1-introducao/main.html
+++ b/bootstrap/1-introducao/main.html
@@ -53,6 +53,9 @@
                         <div class="card-body">
                             <h5 class="card-title">produto 1</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-1">
+                                ver produto
+                            </a>
                         </div>
                     </div>
 
@@ -61,6 +64,9 @@
                         <div class="card-body">
                             <h5 class="card-title">produto 1</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-1">
+                                ver produto
+                            </a>
                         </div>
                     </div>
 
@@ -69,6 +75,9 @@
                         <div class="card-body">
                             <h5 class="card-title">produto 1</h5>
                             <p class="card-text">Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+                            <a class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#modal-1">
+                                ver produto
+                            </a>
                         </div>
                     </div>
                 </div>
@@ -101,6 +110,46 @@
         </div>
     </section>
 
-    <script href="bootstrap_arq/js/bootstrap.bundle.min.js"></script>
+    <div class="modal fade" id="modal-1">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Produto 1</h5>
+                    <button class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <h6>confira o tamanho e os preços</h6>
+                    <table class="table table-hover table-striped">
+                        <thead>
+                            <tr>
+                                <th>tamanho</th>
+                                <th>valor</th>
+                            </tr>
+                        </thead>
+
+                        <tbody>
+                            <tr>
+                                <td>p</td>
+                                <td>100</td>
+                            </tr>
+                            <tr>
+                                <td>m</td>
+                                <td>200</td>
+                            </tr>
+                            <tr>
+                                <td>g</td>
+                                <td>300</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="modal-footer">  
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="bootstrap_arq/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
