--- a/jquery/1-webstore/index.html
+++ b/jquery/1-webstore/index.html
@@ -19,7 +19,7 @@
                 <li><a href="#home">Home</a></li>
                 <li><a href="#produtos">Produtos</a></li>
                 <li><a href="">Sobre nós</a></li>
-                <li><a href="">Contato</a></li>
+                <li><a href="#contato">Contato</a></li>
             </ul>
         </div>
     </nav>
