--- a/7-SASS/index.html
+++ b/7-SASS/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
+
     <h2> caixa 1</h2>
     <div class="box">
         <h2>item 1</h2>
@@ -14,5 +15,22 @@
         <h2>item 2</h2>
         <div>B</div>
     </div>
+
+    <h2>caixa 2</h2>
+    <div class="box-2">
+        <h2>item 1</h2>
+        <div>O</div>
+        <h2>item 2</h2>
+        <div>B</div>
+    </div>
+
+    <h2>caixa 3</h2>
+    <div class="box-3">
+        <h2>item 1</h2>
+        <div>O</div>
+        <h2>item 2</h2>
+        <div>B</div>
+    </div>
+    
 </body>
 </html>
